# red_collar_test_task

./: .dockerignore  .env.docker  .env.docker.example  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  manage.py  mypy.ini  pyproject.toml
authentication/: models.py  serializers.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_alter_user_date_joined_alter_user_email_and_more.py
cms/: forms.py  models.py  page_viewsets.py  snippets.py  tasks.py  utils.py  wagtail_hooks.py
cms/migrations/: 0001_initial.py  0002_alter_mappage_points.py  0003_alter_mappage_description.py  0004_alter_mappage_options_remove_mappage_points_and_more.py  0005_alter_mappage_options_alter_mappagepoint_options_and_more.py  0006_add_en_locale.py  0007_delete_welcome_page.py
cms/static/: hide_header_elements.css  hide_status.css
cms/templates/: map_page.html
config/: mixins.py  models.py  settings.py  urls.py
config/migrations/: 0001_initial.py  0002_outboxtask_retries.py  0003_alter_outboxtask_retries.py
geopoints/: admin.py  apps.py  exceptions.py  fields.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
geopoints/migrations/: 0001_initial.py  0002_alter_mappoint_user_message.py  0003_alter_mappoint_location.py  0004_alter_mappoint_options_alter_message_options_and_more.py  0005_alter_mappoint_options_alter_mappoint_user_and_more.py
geopoints/tests/: conftest.py  test_api_point.py  test_api_point_message.py  test_api_point_search.py
telegram/: utils.py
